--- a/analysis/crypto_apps/c_aes/Makefile
+++ b/analysis/crypto_apps/c_aes/Makefile
@@ -2,8 +2,8 @@ CC=gcc
 ENABLE_DYNAMIC_LOADING=-ldl
 ENABLE_PTHREAD=-pthread
 EX_LIB=$(ENABLE_DYNAMIC_LOADING) $(ENABLE_PTHREAD)
-OPENSSL_INCLUDE=../../openssl/include
-OPENSSL_LIB_CRYPTO=../../openssl/libcrypto.a
+OPENSSL_INCLUDE=..//../openssl/include
+OPENSSL_LIB_CRYPTO=../../../openssl/libcrypto.a
 
 all: app dec enc
 app: main $(OPENSSL_LIB_CRYPTO)
